# pyxll-pycharm

./: README.md  setup.cfg  setup.py
.github/workflows/: build-wheel.yaml  pypi-upload.yaml
pyxll_pycharm/: __init__.py  _import_pydevd.py
src/pyxll_pycharm/: __init__.py
src/pyxll_pycharm/resources/: ribbon.xml
