[metadata]
name = pyxll_pycharm
version = 0.3.0.b1
description = Adds PyCharm debugging support to PyXLL.
long_description: file: README.md
long_description_content_type: text/markdown
license: MIT License
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
project_urls =
    Source = https://github.com/pyxll/pyxll-pycharm
    Tracker = "https://github.com/pyxll/pyxll-pycharm/issues

[options]
install_requires =
    pyxll >= 5.0.0
    pydevd-pycharm
python_requires = >=3.7
packages = find_namespace:
include_package_data: true
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
pyxll_pycharm =
    resources/ribbon.xml
    resources/debug.png

[options.entry_points]
pyxll =
    modules = pyxll_pycharm:modules
    ribbon = pyxll_pycharm:ribbon
